# mv-cpp

./: .gitignore  .gitmodules  README.md  meson.build  meson.options
.clangd/: config.yaml
assets/: pantest.ptcop  script.lua  script.wren
cross/: emscripten.cross  rg350.conf  win.conf
include/: fontstash.h
include/mv/: config.h  context.h  gl.h  mv.h  util.h
include/mv/audio/: pxtone_source.h
include/mv/binary/: cat.h  kleines.h  pixolletta.h  slkscr.h
include/mv/components/: graphics.h  singletons.h
include/mv/graphics/: camera2d.h  drawcall.h  fontrender.h  framebuffer.h  gl_debug.h  graphics.h  indexbuffer.h  quad.h  renderer.h  shader.h  vertex.h  vertexarray.h  vertexbuffer.h  vertexbufferlayout.h
include/mv/objects/: node.h  sprite.h
include/mv/resource/: material.h  resource.h  texture.h
include/mv/scripting/: register_types.h
include/sol/: config.hpp  forward.hpp  sol.hpp
src/: microvidya.cpp  microvidya.h
src/engine/: context.cpp
src/engine/audio/: pxtone_source.cpp
src/engine/graphics/: camera2d.cpp  fontrender.cpp  gl_debug.cpp  indexbuffer.cpp  quad.cpp  renderer.cpp  shader.cpp  vertexbuffer.cpp  vertexbufferlayout.cpp
src/engine/objects/: node.cpp  sprite.cpp
src/engine/resource/: material.cpp  texture.cpp
src/engine/scripting/: register_types.cpp
subprojects/: wren.wrap
subprojects/libpxtone/: meson.build
subprojects/libpxtone/src/: pxtnDelay.h  pxtnEvelist.h  pxtnMaster.h  pxtnOverDrive.h  pxtnPulse_Frequency.h  pxtnPulse_Noise.h  pxtnPulse_NoiseBuilder.h  pxtnPulse_Oscillator.h  pxtnPulse_PCM.h  pxtnService.h  pxtnService_moo.cpp  pxtnText.h  pxtnUnit.h  pxtnWoice.h
subprojects/soloud/: meson.build
subprojects/soloud/src/core/: soloud.cpp
